--- a/PW/package.json
+++ b/PW/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "react": "^19.2.1",
-        "react-dom": "^19.2.1"
+        "react-dom": "^19.2.1",
+        "react-router-dom": "^7.10.1"
     }
 }
